# ur-restrack-mastered

./: .gitmodules  Makefile
files/: config.json  ur-restrack.init
files/default-configs/: default_config.json
pkg_src/: CMakeLists.txt  json_handler.c  resources.c  resources.h  run  sysmon.c  sysmon.h  system_data.json  system_data_temp.json  util.c
pkg_src/config/: ur-restrack-config.json  ur-restrack-topics.json  ur-rpc-generic-topics.json
pkg_src/docs/: OpenWrt_System_Monitor_API_Reference.md  OpenWrt_System_Monitor_Documentation.md  OpenWrt_System_Monitor_Examples.md  OpenWrt_System_Monitor_Usage_Guide.md
pkg_src/sample/: sample_action.json
pkg_src/spec/: ur-restrack.c  ur-restrack.h
pkg_src/src/: config.c  config.h  json_handler.h  sysmon.c  sysmon.h  util.h
